--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -115,11 +115,6 @@
   max-width: 936px;
   width: 100%;
 }
-.post_wrap{
-  width:80%; margin-left:25%;
-  display:flex;
-  justify-content: center;
-}
 
 .profile__photo {
   width: 31%;
@@ -129,9 +124,9 @@
 
 .profile__photo img {
   max-width: 100%;
+  max-height: 100%;
 }
-
-.profile__photo .profile__photo-overlay {
+.profile__photo-overlay {
   position: absolute;
   top: 0;
   background-color: rgba(0, 0, 0, 0.5);
@@ -163,4 +158,92 @@
 .profile__photo-overlay .overlay__item i {
   font-size: 130%;
   margin-right: 5px;
+}
+.modal{
+  display:none; opacity:0;
+  position:fixed; left:0; top:0;
+  width: 100%; height:100vh;
+  background:rgba(0,0,0,0.6);
+
+}
+.active{
+  display:block; opacity:1;
+}
+.modal_light{
+  position:absolute; left:50%; top:50%;
+  width:800px; height:500px;
+  transform:translateX(-50%) translateY(-50%);
+  background:#fff;
+}
+
+.modal_image{
+  position:absolute; left:0; top:0;
+  width:500px; height:500px;
+}
+.modal_image img{
+  width:100%; height:100%;
+}
+.modal_info{
+  position:absolute; right: 0; top:0;
+  width:300px; height:500px;
+}
+.modal_info_user{
+  width:100%; height:50px;
+  display:flex; justify-content:space-between;
+  border-bottom:1px solid #c8c8c8;
+
+}
+.modal_info_user button, #btn-insert{
+  background:none;
+  border:0;
+  outline:0;
+}
+.modal_info_user_info{
+  display:flex; justify-content: left; margin:10px;
+}
+.modal_info_user_profile {
+  width:40px; height:40px;
+  border-radius:80px;
+  overflow: hidden;
+}
+.modal_info_user_profile img{
+  width:100%; height:100%;
+}
+.modal_info_user_info h3{
+  margin: 10px;
+}
+.modal_info_content{
+  width:100%; height:300px;
+  border-bottom:1px solid #c8c8c8;
+}
+.modal_info_content p {
+  padding:30px;
+}
+.modal_action{
+  padding-top:10px;
+  width:100%; height:30px;
+}
+.modal__action,.modal_comments{
+  padding: 10px;
+}
+.modal_comment_input{
+  margin-top:15px;
+  width:100%;
+  display:flex; justify-content: space-between;
+}
+.modal_comment_input input[type=text]{
+  margin-left:10px;
+}
+
+.modal_close{
+  position:absolute; right:50px; top:50px;
+  background:none;
+  border:0;
+  outline:0;
+}
+.modal_close i{
+  cursor:pointer; font-size:20px; color:#fff;
+}
+.modal_likes{
+  margin-left:10px;
 }
