--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -108,19 +108,23 @@
   line-height: 125%;
 }
 
-#profile {
+#profile .profile_photos{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   max-width: 936px;
   width: 100%;
 }
-.profile__photos{
+
+.photo__wrapper{
+  width:100%;
+  max-width:936px;
   display:grid;
-  grid: repeat(3, 60px) / auto-flow 100px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
 }
 .profile__photo {
-  width: 31%;
+  width: 70%;
   margin-bottom: 35px;
   position: relative;
 }
